<resources>
    <string name="app_name">Your GPS</string>

    <string name="title_activity_main">Your GPS</string>

    <string name="dialog_play_services_unavailable">Google Play Services are unavailable.</string>
    <string name="dialog_download_play_services">Download Play Services</string>
    <string name="dialog_close_program">Close Program</string>
    <string name="location_svg_imageview_description">Location SVG ImageView</string>
    <string name="location_svg_background_imageview_description">Location SVG Background ImageView</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>


    <string name="clear_map">Clear Map</string>
    <string name="toggle_traffic">Toggle Traffic</string>
    <string name="satellite">Satellite</string>
    <string name="terrain">Terrain</string>
    <string name="toggle_mock">Toggle Mocking</string>
    <string name="hybrid">Hybrid</string>
    <string name="mock_push">Mock Location</string>
    <string name="steady_random_mock">Steady Mock</string>
    <string name="Settings">Settings</string>
    <string name="paths">Paths</string>
    <string name="paths_menu_header">Your Paths</string>
    <string name="locations_menu_header">Your Paths</string>
    <string name="radius">Radius</string>
    <string name="blank" />


</resources>
